collapsed footer headings on mobile screens, fix #6

--- a/src/scss/section/section-footer.scss
+++ b/src/scss/section/section-footer.scss
@@ -203,8 +203,19 @@
         }
         &.level-2 {
           margin-top: rem(20);
+
+         
         }
       }
+      &.level-2 {
+        
+      &.collapsed {
+       display: none;
+       position: absolute;
+       z-index:-999;
+      }
+    
+    }
     }
     [data-collapsible-group] {
       border: none;
